--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -211,6 +211,12 @@ main{
 
     .third-container{
 
+        h1{
+            @include tablet{
+                padding-top: 100px;
+            }
+        }
+
         .icons{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr 1fr;
